--- a/src/emergent/lib/CMakeLists.txt
+++ b/src/emergent/lib/CMakeLists.txt
@@ -14,7 +14,7 @@ include(${PROJECT_SOURCE_DIR}/src/emergent/network/CMakeFiles.txt)
 ADD_PATH_TO_FILES(emergent_network_SRCS ${mypath}/network "${network_SRCS}")
 ADD_PATH_TO_FILES(emergent_network_HEADS_MOC ${mypath}/network "${network_HEADS_MOC}")
 ADD_PATH_TO_FILES(emergent_network_HEADS_MAKETA ${mypath}/network "${network_HEADS_MAKETA}")
-QT4_WRAP_CPP(emergent_network_SRCS_MOC ${emergent_network_HEADS_MOC})
+QT4_WRAP_CPP(emergent_network_SRCS_MOC ${emergent_network_HEADS_MOC} OPTIONS ${MOC_DEFINES})
 SET_TA_PROPS(emergent ${PROJECT_SOURCE_DIR}/src/emergent/network)
 
 # bp
