revert gen .cpp fix

--- a/src/temt/lib/CMakeLists.txt
+++ b/src/temt/lib/CMakeLists.txt
@@ -21,8 +21,7 @@ ADD_PATH_TO_FILES(temt_ta_SRCS ${mypath}/ta "${ta_SRCS}")
 ADD_PATH_TO_FILES(temt_ta_HEADS_MOC ${mypath}/ta "${ta_HEADS_MOC}")
 ADD_PATH_TO_FILES(temt_ta_HEADS_MAKETA ${mypath}/ta "${ta_HEADS_MAKETA}")
 QT4_WRAP_CPP(temt_ta_SRCS_MOC ${temt_ta_HEADS_MOC} OPTIONS ${MOC_DEFINES})
-CREATE_MAKETA_COMMAND(ta ${mypath} "${ta_HEADS_MAKETA}")
-#SET_TA_PROPS(ta ${PROJECT_SOURCE_DIR}/src/temt/ta)
+SET_TA_PROPS(ta ${PROJECT_SOURCE_DIR}/src/temt/ta)
 
 # css
 include(${PROJECT_SOURCE_DIR}/src/temt/css/CMakeFiles.txt)
