complete cmake plugin build system, with build_plugin.sh script that does full build and install -- finds installed version and works off of that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,52 +3,48 @@
 # 
 # mkdir build;
 # cd build;
-# cmake ../ [-G XCode] [-DMPI_BUILD=true]
+# cmake ../ [-G see cmake --help for options] [-DMPI_BUILD=true] \
 #  [-DCMAKE_BUILD_TYPE=None | Debug | Release | RelWithDebInfo | MinSizeRel]
+#  [-DCMAKE_INSTALL_PREFIX=<path to install>]
 #
 # ccmake ./ to edit custom options
 #
-
 # Important notes:
 # 1. do qmake -v -- if it does not say "Using Qt version 4.x.x.." (i.e., it says 3.x.x)
 #    then you must find the qmake that is for Qt version 4 and set your path so it is
 #    found first!
 
-# Note: required minimum cmake version
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0 FATAL_ERROR)
+################################################################
+# Step 1: ensure we have the right version of cmake
 
+CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0 FATAL_ERROR)
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
 endif(COMMAND cmake_policy)
 
+################################################################
+# Step 2: set all the basic parameters about the project
+
 PROJECT(emergent)
 
-INCLUDE(CPack)
-INCLUDE(CTest)
-
-# crazy how hard it is to set the default build type 
+# default build type is RelWithDebInfo
 IF(NOT CMAKE_BUILD_TYPE)
-# this does nothing:
-#  set(CMAKE_BUILD_TYPE Release CACHE STRING "Type of build to make: Debug or Release")
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 ENDIF(NOT CMAKE_BUILD_TYPE)
 
-# to enable MPI
+# set cache parameter for mpi option
 set(MPI_BUILD FALSE CACHE BOOL "Set to true to enable MPI distributed memory system")
 
-# default install prefix: hopefully /usr/local/ ??
-#set(CMAKE_INSTALL_PREFIX /usr/local)
-
-####################################################
-# version setting
+#### version setting
 
 set(EMERGENT_VERSION_MAJOR "4")
 set(EMERGENT_VERSION_MINOR "0")
 set(EMERGENT_VERSION_PATCH "18")
 set(EMERGENT_VERSION "${EMERGENT_VERSION_MAJOR}.${EMERGENT_VERSION_MINOR}.${EMERGENT_VERSION_PATCH}")
 
-####################################################
-# misc global stuff: paths, finding packages etc
+################################################################
+# Step 3: misc global stuff: paths, finding packages etc
+# Typically no need to change anything below here
 
 set(mod_path "${PROJECT_SOURCE_DIR}/CMakeModules")
 
@@ -57,40 +53,26 @@ set(CMAKE_MODULE_PATH ${mod_path})
 # turn this on for debugging new things
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 
-find_package(Qt4 REQUIRED)
-find_package(Coin REQUIRED)
-find_package(SoQt REQUIRED)
-find_package(Readline REQUIRED)
-find_package(ODE)
-find_package(GSL)
+# packaging and testing systems
+include(CPack)
+include(CTest)
 
-# setup QT_LIBRARIES, defines, etc through options, and the QT_USE_FILE thing does automagic
-# TODO: can't figure out why it is still complaining about qt3 support but it is
-# need to fix that!
-set(QT_USE_QT3SUPPORT 1)
-set(QT_USE_QTOPENGL 1)
-set(QT_USE_QTXML 1)
-include(${QT_USE_FILE})
+# find all of our dependencies -- also sets their include paths in include_directories
+# and sets the EMERGENT_DEP_LIBRARIES variable to all the dependency libraries
+find_package(EmergentDependencies)
 
-include_directories(${QT_INCLUDES} ${COIN_INCLUDE_DIR} ${SOQT_INCLUDE_DIR}
-${PROJECT_SOURCE_DIR}
-${PROJECT_SOURCE_DIR}/src/temt/ta
-${PROJECT_SOURCE_DIR}/src/temt/taiqtso
-${PROJECT_SOURCE_DIR}/src/temt/css
-${PROJECT_SOURCE_DIR}/src/temt/css
-${PROJECT_SOURCE_DIR}/src/emergent/network
-${PROJECT_SOURCE_DIR}/src/emergent/bp
-${PROJECT_SOURCE_DIR}/src/emergent/leabra
-${PROJECT_SOURCE_DIR}/src/emergent/so
-${PROJECT_SOURCE_DIR}/src/emergent/cs
-)
-
-# all libraries to link to -- used automatically in EMERGENT_LINK_LIBRARIES
-# specify in executables
-set(EMERGENT_LIBRARIES ${COIN_LIBRARY} ${SOQT_LIBRARY} ${QT_LIBRARIES}
-    ${READLINE_LIBRARY}
-    ${ODE_LIBRARY}
-    ${GSL_LIBRARIES}
+# inclue all our subdirs in overall path
+include_directories(
+  ${PROJECT_SOURCE_DIR}
+  ${PROJECT_SOURCE_DIR}/src/temt/ta
+  ${PROJECT_SOURCE_DIR}/src/temt/taiqtso
+  ${PROJECT_SOURCE_DIR}/src/temt/css
+  ${PROJECT_SOURCE_DIR}/src/temt/css
+  ${PROJECT_SOURCE_DIR}/src/emergent/network
+  ${PROJECT_SOURCE_DIR}/src/emergent/bp
+  ${PROJECT_SOURCE_DIR}/src/emergent/leabra
+  ${PROJECT_SOURCE_DIR}/src/emergent/so
+  ${PROJECT_SOURCE_DIR}/src/emergent/cs
 )
 
 # this is used for versioning the libs themselves
@@ -101,30 +83,14 @@ set(EMERGENT_LIB_SOVERSION ${EMERGENT_VERSION_MAJOR})
 set(EMERGENT_INCLUDE_DEST include/Emergent)
 set(EMERGENT_SHARE_DEST share/Emergent)
 
-# determine the suffix based on build type
-
-IF(CMAKE_BUILD_TYPE MATCHES "Debug") 
-    IF(MPI_BUILD)
-	set(CMAKE_DEBUG_POSTFIX "_dbg_mpi")
-	set(CMAKE_EXECUTABLE_SUFFIX "_dbg_mpi")
-    ELSE(MPI_BUILD)
-	set(CMAKE_DEBUG_POSTFIX "_dbg")
-	set(CMAKE_EXECUTABLE_SUFFIX "_dbg")
-    ENDIF(MPI_BUILD)
-ELSE(CMAKE_BUILD_TYPE MATCHES "Debug") 
-    IF(MPI_BUILD)
-	set(CMAKE_RELEASE_POSTFIX "_mpi")
-	set(CMAKE_EXECUTABLE_SUFFIX "_mpi")
-    ELSE(MPI_BUILD)
-	set(CMAKE_RELEASE_POSTFIX "")
-	set(CMAKE_EXECUTABLE_SUFFIX "")
-    ENDIF(MPI_BUILD)
-ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug") 
-
-# NOTE: several important macros in here:
+# set the lib and executable suffix based on build type
+include(${mod_path}/SetBuildSuffix.cmake)
+# several important macros in here:
 include(${mod_path}/MacroLibrary.cmake)
-# this one makes the config.h from cmake_config.h.in
+# this one does all the configure checks to set various variables
 include(${mod_path}/ConfigureChecks.cmake)
+# this one makes the config.h from cmake_config.h.in
+include(${mod_path}/ConfigureGenerate.cmake)
 # all the support for maketa:
 include(${mod_path}/Maketa.cmake)
 
@@ -145,7 +111,7 @@ message( STATUS "---------------------------------------------------------------
 
 
 ####################################
-#  All the subdirs
+#  Now the actual building begins: all the subdirs
 
 # TEMT system: The EMergent Toolkit
 add_subdirectory(src/temt/maketa)
@@ -180,11 +146,17 @@ add_subdirectory(demo/so)
 add_subdirectory(demo/virt_env)
 add_subdirectory(demo/data_proc)
 
-
 ########### install files ###############
 
 install(FILES AUTHORS ChangeLog COPYING COPYING.LIB INSTALL NEWS README
   DESTINATION ${EMERGENT_SHARE_DEST}
+)
+
+# also install our cmake module files for use by plugins, etc
+FILE(GLOB OUR_CMAKE_MOD_FILES "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/*.cmake")
+
+install(FILES ${OUR_CMAKE_MOD_FILES}
+  DESTINATION ${EMERGENT_SHARE_DEST}/CMakeModules
 )
 
 ########### uninstall files ###############
