--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -4,7 +4,7 @@ set(emergentbin_SRCS main.cpp)
 
 add_executable(emergent ${emergentbin_SRCS})
 
-target_link_libraries(emergent emergentlib temt ${EMERGENT_LIBRARIES})
+target_link_libraries(emergent emergentlib temt ${EMERGENT_DEP_LIBRARIES})
 
 ########### install files ###############
 
