--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -6,6 +6,10 @@ add_executable(emergent ${emergentbin_SRCS})
 
 target_link_libraries(emergent emergentlib temt ${EMERGENT_DEP_LIBRARIES})
 
+if (WIN32)
+  add_definitions(-DTA_DLL -DEMERGENT_DLL)
+endif (WIN32)
+
 ########### install files ###############
 
 install(TARGETS emergent
