--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(emergent ${emergentbin_SRCS})
 
 target_link_libraries(emergent emergentlib temt ${EMERGENT_DEP_LIBRARIES})
 
+# Windows import/export control
 if (WIN32)
   add_definitions(-DTA_DLL -DEMERGENT_DLL)
 endif (WIN32)
